--- a/bootstrap-practice/portfolio.html
+++ b/bootstrap-practice/portfolio.html
@@ -1,4 +1,4 @@
-<!--<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <header>
+  <!--<header>
     <div class="headerBackground">
       <div class="container mb-4">
         <div class="row">
@@ -300,8 +300,18 @@
         </div>
       </div>
     </div>
-  </section>
+  </section>-->
+
+
+
+<div class="service-29128 text-center">
+<span class="d-block wrap-icon">
+<span class="icon-desktop_mac"></span>
+</span>
+<h3>Web Design</h3>
+<p>Lorem ipsum dolor sit amet. Consectetur adipisicing elit Eaque commodi.</p>
+</div>
+
 </body>
 
-</html>-->
-
+</html>
