--- a/my_portfolio.html
+++ b/my_portfolio.html
@@ -18,10 +18,12 @@
 <body>
 
   <div class="sidebar">
-    <a class="active" href="#home"><i class="fa fa-home"></i>&nbsp;Home</a>
+    <a href="#" class="d-none d-md-block pl-3"><span class="nameLogo p-1">KR</span></a>
+    <a href="#home"><i class="fa fa-home"></i>&nbsp;Home</a>
     <a href="resume1.html"><i class="fa fa-file-text"></i>&nbsp;Resume</a>
     <a href="#about"><i class="fa fa-user"></i>&nbsp;About</a>
     <a href="#contact"><i class="fa fa-phone"></i>&nbsp;Contact</a>
+    <a href="education.html"><i class="fa fa-book"></i>&nbsp;Education</a>
   </div>
 
   <div class="content p-0">
@@ -38,9 +40,9 @@
       </div>
     </section>
     <section>
-      <div class="container mt-4">
+      <div class="container mt-5">
         <div class="row">
-          <div class="col-12 col-md-8">
+          <div class="col-12 col-lg-8">
             <h2 class="mb-4 headingsFont" id=about>About <span class="text-primary">Me</span></h2>
             <p class="contentFont">&emsp;Hey I am M.VijayaLakshmi.I don’t like to define myself by the work I’ve done. I define myself by the work I want to do. Skills can be taught, personality is inherent. I prefer to keep learning, continue challenging myself, and do interesting
               things that matter<br><br>&emsp;Fueled by high energy levels and boundless enthusiasm, I’m easily inspired and more then willing to follow my fascinations wherever they take me. I’m passionate, expressive, multi-talented spirit with a natural
@@ -72,7 +74,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 border-left border-primary  text-md-right d-none d-md-flex">
+          <div class="col-lg-4 border-left border-primary  text-md-right d-none d-lg-flex">
             <img src="khyathi.jpg" height="350px;" alt="myImage">
           </div>
         </div>
@@ -166,6 +168,65 @@
     <section>
       <div class="container">
         <div class="row">
+          <div class="col-12">
+            <h2 class="headingsFont mb-4">Hobbies</h2>
+          </div>
+          <div class="col-12 col-md-4">
+            <div class="row">
+              <div class="col-3 col-md-4 mb-2">
+                <img src="dance.jpg" class="hobbiesImg">
+              </div>
+              <div class="col-9 col-md-8 mt-4">
+                <h5 class="contentFont">Dancing</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-4">
+            <div class="row">
+              <div class="col-3 col-md-4 mb-2">
+                <img src="yoga.jpeg" class="hobbiesImg">
+              </div>
+              <div class="col-9 col-md-8 mt-4">
+                <h5 class="contentFont">Yoga</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-4">
+            <div class="row">
+              <div class="col-3 col-md-4 mb-2">
+                <img src="images.jpeg" class="hobbiesImg">
+              </div>
+              <div class="col-9 col-md-8 mt-4">
+                <h5 class="contentFont">Reading books</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-4">
+            <div class="row">
+              <div class="col-3 col-md-4 mb-2">
+                <img src="sounds-header.jpg" class="hobbiesImg">
+              </div>
+              <div class="col-9 col-md-8 mt-4">
+                <h5 class="contentFont">Music</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-4">
+            <div class="row">
+              <div class="col-3 col-md-4 mb-2">
+                <img src="tiktok.jpg" class="hobbiesImg">
+              </div>
+              <div class="col-9 col-md-8 mt-4">
+                <h5 class="contentFont">Tiktok</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="container">
+        <div class="row">
           <div class="col-12 text-center">
             <ul class="p-0">
               <li class="mt-4">
@@ -180,6 +241,7 @@
       </div>
     </section>
   </div>
+  
 </body>
 
 </html>
