--- a/bootstrap-practice/portfolio.html
+++ b/bootstrap-practice/portfolio.html
@@ -11,6 +11,9 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   <link rel="stylesheet" type="text/css" href="portfolio.css" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+  <!--<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>-->
 </head>
 
 <body>
@@ -304,13 +307,51 @@
 
 
 
-<div class="service-29128 text-center">
-<span class="d-block wrap-icon">
-<span class="icon-desktop_mac"></span>
-</span>
-<h3>Web Design</h3>
-<p>Lorem ipsum dolor sit amet. Consectetur adipisicing elit Eaque commodi.</p>
+<!--Carousel Wrapper-->
+<!DOCTYPE html>
+<html>
+<title>W3.CSS</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<body>
+
+<div class="w3-container">
+  <h1>Using Font Awesome Icons</h1>
+
+  <div class="w3-padding w3-xlarge w3-teal">
+    <i class="fa fa-home"></i>
+    <i class="fa fa-search"></i>
+    <i class="fa fa-cloud"></i>
+    <i class="fa fa-trash"></i>
+    Welcome!
+  </div>
+
+  <div class="w3-padding w3-xlarge w3-text-orange">
+    <i class="fa fa-home"></i>
+    <i class="fa fa-search"></i>
+    <i class="fa fa-cloud"></i>
+    <i class="fa fa-trash"></i>
+    Welcome!
+  </div>
+
+  <ul class="w3-ul">
+    <li><i class="fa fa-home"></i> Home</li>
+    <li class="w3-large"><i class="fa fa-home"></i> Home</li>
+    <li class="w3-xlarge"><i class="fa fa-home"></i> Home</li>
+    <li class="w3-xxlarge"><i class="fa fa-home"></i> Home</li>
+    <li class="w3-xxxlarge"><i class="fa fa-home"></i> Home</li>
+    <li class="w3-jumbo w3-teal"><i class="fa fa-home"></i> Home</li>
+  </ul>
+
+  <p><button class="w3-btn w3-orange w3-xlarge">Button<i class="w3-margin-left fa fa-home"></i></button></p>
+
+  <p><i class="w3-jumbo w3-spin fa fa-home"></i></p>
 </div>
+
+</body>
+</html> 
+
 
 </body>
 
