--- a/my_portfolio.html
+++ b/my_portfolio.html
@@ -19,11 +19,21 @@
 
   <div class="sidebar">
     <a href="#" class="d-none d-md-block pl-3"><span class="nameLogo p-1">KR</span></a>
-    <a href="#home"><i class="fa fa-home"></i>&nbsp;Home</a>
-    <a href="resume1.html"><i class="fa fa-file-text"></i>&nbsp;Resume</a>
-    <a href="#about"><i class="fa fa-user"></i>&nbsp;About</a>
-    <a href="#contact"><i class="fa fa-phone"></i>&nbsp;Contact</a>
-    <a href="education.html"><i class="fa fa-book"></i>&nbsp;Education</a>
+    <a href="#home"><i class="fa fa-home"></i>
+      Home
+    </a>
+    <a href="resume1.html"><i class="fa fa-file-text"></i>
+      Resume
+    </a>
+    <a href="#about"><i class="fa fa-user"></i>
+      About
+    </a>
+    <a href="contact.html"><i class="fa fa-phone"></i>
+      Contact
+    </a>
+    <a href="education.html"><i class="fa fa-book"></i>
+      Education
+    </a>
   </div>
 
   <div class="content p-0">
@@ -42,7 +52,7 @@
     <section>
       <div class="container mt-5">
         <div class="row">
-          <div class="col-12 col-lg-8">
+          <div class="col-12 col-lg-7">
             <h2 class="mb-4 headingsFont" id=about>About <span class="text-primary">Me</span></h2>
             <p class="contentFont">&emsp;Hey I am M.VijayaLakshmi.I don’t like to define myself by the work I’ve done. I define myself by the work I want to do. Skills can be taught, personality is inherent. I prefer to keep learning, continue challenging myself, and do interesting
               things that matter<br><br>&emsp;Fueled by high energy levels and boundless enthusiasm, I’m easily inspired and more then willing to follow my fascinations wherever they take me. I’m passionate, expressive, multi-talented spirit with a natural
@@ -52,11 +62,11 @@
             <div class="row">
               <div class="col-12">
                 <button onclick="myFunction()" id="myBtn" class="btn btn-primary mb-4 px-4 mr-2">Know more</button>
-                <button class="btn btn-outline-primary px-4 mb-4"><i class="fa fa-envelope" style="font-size:20px"></i>&nbsp;Contact me</button>
+                <a class="btn btn-outline-primary px-4 mb-4" href="contact.html"><i class="fa fa-envelope" style="font-size:20px"></i>&nbsp;Contact me</a>
                 <script>
                   function myFunction() {
                     var dots = document.getElementById("dots");
-                    var moreText = document.getElementById("more");
+                    var moreText = document.getElementById("more");https://ap-southeast-1.console.aws.amazon.com/cloud9/ide/539e8499d3fb46e9b7db181754846a07
                     var btnText = document.getElementById("myBtn");
 
                     if (dots.style.display === "none") {
@@ -74,8 +84,8 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 border-left border-primary  text-md-right d-none d-lg-flex">
-            <img src="khyathi.jpg" height="350px;" alt="myImage">
+          <div class="col-lg-5 border-left border-primary  text-md-right d-none d-lg-flex">
+            <img src="bujji.jpg" height="350px;" alt="myImage">
           </div>
         </div>
       </div>
@@ -166,7 +176,7 @@
       </div>
     </section>
     <section>
-      <div class="container">
+      <div class="container mb-4">
         <div class="row">
           <div class="col-12">
             <h2 class="headingsFont mb-4">Hobbies</h2>
@@ -225,23 +235,19 @@
       </div>
     </section>
     <section>
-      <div class="container">
+      <div class="container-fluid bg-dark text-white">
         <div class="row">
           <div class="col-12 text-center">
-            <ul class="p-0">
-              <li class="mt-4">
-                <h4>Follow me on</h4>
-              </li>
-              <li class="liDisplay"><a class="nav-link" href="https://www.linkedin.com/in/khyathi-reddy-prasanth/"><img src="static/Social Icons/linkedin.svg" alt="linkedin" class="socialIcons"></a></li>
-              <li class="liDisplay"><a class="nav-link" href="https://www.instagram.com/khyathi_reddy_/?hl=en"><img src="static/Social Icons/instagram.svg" class="socialIcons" alt="instagram"></a></li>
-              <li class="liDisplay"><a class="nav-link" href="https://www.facebook.com/profile.php?id=100016310478419"><img src="static/Social Icons/facebook.svg" alt="facebook" class="socialIcons"></a></li>
-            </ul>
+            <h3 class="headingsFont mt-3">Follow me on</h3>
+            <li class="liDisplay"><a class="nav-link" href="https://www.linkedin.com/in/khyathi-reddy-prasanth/"><i class="fa fa-linkedin socialIcons" style="font-size:20px;color:black"></i></a></li>
+            <li class="liDisplay"><a class="nav-link" href="https://www.instagram.com/khyathi_reddy_/?hl=en"><i class="fa fa-instagram socialIcons" style="font-size:20px;color:black"></i></a></li>
+            <li class="liDisplay"><a class="nav-link" href="https://www.twitter.com"><i class="fa fa-twitter socialIcons" style="font-size:20px;color:black"></i></a></li>
           </div>
         </div>
       </div>
     </section>
   </div>
-  
+
 </body>
 
 </html>
