--- a/resume1.html
+++ b/resume1.html
@@ -125,7 +125,7 @@
             <div class="container blockColor">
                 <div class="row">
                     <div class="col-12 text-center">
-                        <a href="my_portfolio.html" class="btn btn-outline-primary">Back to portfolio :-)</a>
+                        <a href="my_portfolio.html" class="btn btn-outline-primary mb-4">Back to portfolio :-)</a>
                     </div>
                 </div>
             </div>
