--- a/education.html
+++ b/education.html
@@ -2,16 +2,16 @@
 <html>
 
 <head>
-      <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <link rel="stylesheet" href="../bootstrap/bootstrap.min.css" />
-  <script src="bootstrap/jquery.min.js"></script>
-  <script src="bootstrap/popper.min.js"></script>
-  <script src="bootstrap/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  <link rel="stylesheet" type="text/css" href="education.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <link rel="stylesheet" href="../bootstrap/bootstrap.min.css" />
+    <script src="bootstrap/jquery.min.js"></script>
+    <script src="bootstrap/popper.min.js"></script>
+    <script src="bootstrap/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="education.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 
@@ -26,18 +26,38 @@
                 </div>
                 <div class="row">
                     <div class="col-12 col-lg-3 block">
-                        <div>2014-2017</div><br>
+                        <div>2017-2021</div><br>
                         <h5>Bachelor's<br>Degree</h5>
                     </div>
                     <div class="col-12 d-lg-none ">
                         <h5>Computer Science Engineering</h5>
                         <p>IIIT R K Valley</p>
-                        <p>Hi this is khyathi.I am studying Btech 3rd year.I am working as intern at ib hubs</p>
+                        <p>I am now pursuing my degree in the stream of Computer Science Engineering at AP IIIT RK Valley</p>
                     </div>
                     <div class="col-lg-9 d-none d-lg-block descriptionBlock">
                         <h5>Computer Science Engineering</h5>
                         <p>IIIT R K Valley</p>
-                        <p>Hi this is khyathi.I am studying Btech 3rd year.I am working as intern at ib hubs</p>
+                        <p>I am now pursuing my degree in the stream of Computer Science Engineering at AP IIIT RK Valley</p>
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="col-12 col-lg-3 block">
+                        <div>2014-2017</div><br>
+                        <h5>Pre university<br>Course</h5>
+                    </div>
+                    <div class="col-12 d-lg-none">
+                        <h5>Computer Science Engineering</h5>
+                        <p>IIIT R K Valley</p>
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+                        sed diam nonummy nibh euismod tincidunt ut laoreet dolore</p>
+                    </div>
+                    <div class="col-lg-9 d-none d-lg-block descriptionBlock">
+                        <h5>Computer Science Engineering</h5>
+                        <p>IIIT R K Valley</p>
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+                        sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+                        </p>
                     </div>
                 </div>
                 <br>
@@ -49,39 +69,22 @@
                     <div class="col-12 d-lg-none">
                         <h5>Computer Science Engineering</h5>
                         <p>IIIT R K Valley</p>
-                        <p>Hi this is khyathi.I am studying Btech 3rd year.I am working as intern at ib hubs</p>
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+                        sed diam nonummy nibh euismod tincidunt ut laoreet dolore</p>
                     </div>
                     <div class="col-lg-9 d-none d-lg-block descriptionBlock">
                         <h5>Computer Science Engineering</h5>
                         <p>IIIT R K Valley</p>
-                        <p>Hi this is khyathi.I am studying Btech 3rd year.I am working as intern at ib hubs</p>
-                    </div>
-                </div>
-                <br>
-                <div class="row">
-                    <div class="col-12 col-lg-3 block">
-                        <div>2014-2017</div><br>
-                        <h5>Bachelor's<br>Degree</h5>
-                    </div>
-                    <div class="col-12 d-lg-none">
-                        <h5>Computer Science Engineering</h5>
-                        <p>IIIT R K Valley</p>
-                        <p>Hi this is khyathi.I am studying Btech 3rd year.I am working as intern at ib hubs</p>
-                    </div>
-                    <div class="col-lg-9 d-none d-lg-block descriptionBlock">
-                        <h5>Computer Science Engineering</h5>
-                        <p>IIIT R K Valley</p>
-                        <p>Hi this is khyathi.I am studying Btech 3rd year.I am working as intern at ib hubs</p>
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+                        sed diam nonummy nibh euismod tincidunt ut laoreet dolore</p>
                     </div>
                 </div>
             </div>
-         </div>
-    </section>
-    <section>
-        <div class="container blockColor mt-4">
-            <div class="row">
-                <div class="col-12 text-center">
-                    <a href="my_portfolio.html" class="btn btn-outline-primary">Back to portfolio :-)</a>                    
+            <div class="container blockColor mt-4">
+                <div class="row">
+                    <div class="col-12 text-center">
+                        <a href="my_portfolio.html" class="btn btn-outline-primary">Back to portfolio :-)</a>
+                    </div>
                 </div>
             </div>
         </div>
