--- a/assign.html
+++ b/assign.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html>
-    <head>
-        <title>Khyathi</title>
-        <style>
+
+<head>
+    <title>Khyathi</title>
+    <!--<style>
         @import url('https://fonts.googleapis.com/css?family=Monofett|Monoton|Oswald|Roboto|Akronim&display=swap');
             h1{
                 text-align:center;
@@ -30,10 +31,12 @@
                 font-style:italic;
                 font-weight:bold;
             }
-        </style>
-    </head>
-    <body>
-        <h1>Khyathi Reddy</h1>
+        </style>-->
+    <link rel="stylesheet" type="text/css" href="assigns.css" />
+</head>
+
+<body>
+    <!--<h1>Khyathi Reddy</h1>
         <h2>
         Student
         </h2>
@@ -64,6 +67,19 @@
             <li>Develped HTML,CSS,JavaScript,and JSP pages for user interaction</li>
         </ol>
         <p class="id3">Contact ME</p>
-        <p class="id4">lakshmi210800@gmail.com</p>
-    </body>
+        <p class="id4">lakshmi210800@gmail.com</p>-->
+    <div class="parent">
+        <p>sedfghjk</p>
+        <ul class="child">
+            <li>HOme</li>
+            <li>About</li>
+            <li>COntact</li>
+        </ul>
+    </div>
+    <div class="fixed">
+        <p>this is khyathi</p>
+    </div>
+    <!--<p>Welcome Alien</p>-->
+</body>
+
 </html>
