--- a/assignments/assignment-34/flexbox.html
+++ b/assignments/assignment-34/flexbox.html
@@ -10,9 +10,40 @@
 
 <body>
   <div class="container">
-      <!--<img class="twitter" src="assets/twitter.jpg" alt="twitter">-->
-      <h3>Twitter</h3>
-      <img src="assets/tick.svg" alt="blue tick">
+      <div class="image">
+        <img src="assets/twitter.jpg" alt="twitter_logo" class="twitter">
+      </div>
+      <div class="content">
+        <div class="row1">
+          <ul>
+            <li><b><span>Twitter</span></b></li>
+            <li class="tick"><span><img src="assets/tick.svg" alt="blue tick" height="18px;"></span></li>
+            <li class="contentOpacity"><b class="drop_down">@Twitter . jan 1</b>
+            </li>
+          </ul>
+          <img src="assets/drop_down.svg" alt="drop_down" height="18px;">
+        </div>
+        <div class="row2">
+          <p class="context">New decade, drink water</p>
+        </div>
+        <div class="row3">
+          <ul>
+            <li>
+              <img src="assets/message.svg" alt="message" height="20px;"><span class="icon_text">13.5k</span></span>
+            </li>
+            <li>
+              <img src="assets/retweet.svg" alt="message" height="20px;"><span class="icon_text">290.8k</span>
+            </li>
+            <li>
+              <img src="assets/like.svg" alt="message" height="20px;"><span class="icon_text">943.1k</span>
+            </li>
+            <li>
+              <img src="assets/share.svg" alt="message" height="20px;" class="share">
+              <img src="assets/share_desktop.svg" alt="message" height="20px;" class="share_desktop">
+            </li>
+          </ul>
+        </div>
+      </div>
   </div>
 </body>
 
