--- a/assignments/assignment-38/flexbox.html
+++ b/assignments/assignment-38/flexbox.html
@@ -15,7 +15,27 @@
   </head>
   <body>
     <div class="flexbox">
-      <!-- Write your code below this line -->
+      <div class="header">
+        <h3>Header</h3>
+      </div>
+      <div class="navigation">
+        <h3>Navigation</h3>
+      </div>
+      <div class="main">
+        <h3>Main</h3>
+        <div class="article">
+          <h3>Article</h3>
+          <div class="section">
+            <h3>Section</h3>
+          </div>
+          <div class="section">
+            <h3>Section</h3>
+          </div>
+        </div>
+      </div>
+      <div class="footer">
+        <h3>footer</h3>
+      </div>
     </div>
   </body>
 </html>
