--- a/assignments/assignment-39/index.html
+++ b/assignments/assignment-39/index.html
@@ -1,17 +1,71 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <link rel="stylesheet" href="../../bootstrap/bootstrap.min.css" />
-    <script src="../../bootstrap/jquery.min.js"></script>
-    <script src="../../bootstrap/popper.min.js"></script>
-    <script src="../../bootstrap/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="index.css" />
-  </head>
 
-  <body></body>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <link rel="stylesheet" href="../../bootstrap/bootstrap.min.css" />
+  <script src="../../bootstrap/jquery.min.js"></script>
+  <script src="../../bootstrap/popper.min.js"></script>
+  <script src="../../bootstrap/bootstrap.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="index.css" />
+</head>
+
+<body>
+  <div class="container">
+    <div class="imageBackgroundItem">
+      <div class="gradient">
+        <div class="item">
+          <h3 class="font_color day">Friday</h3>
+          <p class="font_color date">31 Jan 2020</p>
+          <p class="font_color district"><img src="assets/location.svg" alt="location" class="locationImg"> Kurnool</p>
+        </div>
+        <div class="item">
+          <img src="assets/sun-white.svg" alt="white-sun" class="gradientSun">
+          <p class="font_color temperature">29<sup>o</sup>C</p>
+          <h5 class="font_color">Sunny</h5>
+        </div>
+      </div>
+    </div>
+    <div class="blackBackrgroundItem">
+      <div class="weather">
+        <ul>
+          <li>PRECIPITATION</li>
+          <li>HUMIDITY</li>
+          <li>WIND</li>
+        </ul>
+        <ul class="weatherPercentage">
+          <li>0%</li>
+          <li>34%</li>
+          <li>0 km/h</li>
+        </ul>
+      </div>
+      <div class="weatherDays">
+        <div class="weatherForecast sat">
+          <img src="assets/sun-black.svg" alt="black-sun">
+          <p class="weatherForecastDays">Sat</p>
+          <p class="temp">29<sup>o</sup>C</p>
+        </div>
+        <div class="weatherForecast">
+          <img src="assets/cloud.svg" alt="cloud">
+          <p class="weatherForecastDays">Sun</p>
+          <p class="temp">21<sup>o</sup>C</p>
+        </div>
+        <div class="weatherForecast">
+          <img src="assets/cloud.svg" alt="cloud">
+          <p class="weatherForecastDays">Mon</p>
+          <p class="temp">08<sup>o</sup>C</p>
+        </div>
+        <div class="weatherForecast">
+          <img src="assets/cloud-rain.svg" alt="cloud-rain">
+          <p class="weatherForecastDays">Tue</p>
+          <p class="temp">19<sup>o</sup>C</p>
+        </div>
+      </div>
+      <div class="locationButton">
+        <p class="locationPadding"><img src="assets/location.svg" alt="location" class=locationImg> Change location</p>
+      </div>
+    </div>
+  </div>
+</body>
 </html>
