--- a/assignments/assignment-20/index.html
+++ b/assignments/assignment-20/index.html
@@ -30,7 +30,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-6">
+              <div class="col-6 black">
                 <div class="row">
                   <div class="col-7">
                     <h6 class="font_color head">PRECIPITATION</h6>
