--- a/assignments/assignment-37/flexbox.html
+++ b/assignments/assignment-37/flexbox.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
   <link rel="stylesheet" href="flexbox.css" />
-  <!--<script type="text/javascript" src="https://tap.ibhubs.in/utils/flex-item-width.js"></script>-->
+  <script type="text/javascript" src="https://tap.ibhubs.in/utils/flex-item-width.js"></script>
 </head>
 
 <body>
